--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/lodash": "^4.17.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
